--- a/world/check/.artixlinux/pkgbase.yaml
+++ b/world/check/.artixlinux/pkgbase.yaml
@@ -1,56 +1,62 @@
 ---
-pkgbase:
-  name: check
-  version: 0.15.2-2
-  arch:
-    - x86_64
-  pkgname:
-    - check
-    - check-docs
 actions:
-  addRepo: null
-  removeRepo: null
+  addRepo: world
+  removeRepo: world-gremlins
   triggersBuild: false
   triggersRebuild: false
-  triggersRepoAdd: false
-  triggersRepoRemove: false
+  triggersRepoAdd: true
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 0.15.2-2
+    version: 0.15.2-3
     packages:
-      - check-0.15.2-2-x86_64.pkg.tar.zst
-      - check-docs-0.15.2-2-x86_64.pkg.tar.zst
+      - check-0.15.2-3-x86_64.pkg.tar.zst
+      - check-docs-0.15.2-3-x86_64.pkg.tar.zst
+    debug:
+      - check-debug-0.15.2-3-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
+team: world
