--- a/world/freeglut/PKGBUILD
+++ b/world/freeglut/PKGBUILD
@@ -1,11 +1,10 @@
-# Maintainer: nikolar <nikolar@artixlinux.org>
 # Maintainer: Jan Alexander Steffens (heftig) <heftig@archlinux.org>
 # Contributor: Eric Belanger <eric@archlinux.org>
 # Contributor: Tom Newsom <Jeepster@gmx.co.uk>
 
 pkgname=freeglut
 pkgver=3.6.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Free OpenGL Utility Toolkit"
 url="https://freeglut.sourceforge.net/"
 arch=(x86_64)
@@ -32,6 +31,12 @@ b2sums=('2ce2bc7ff759405be701f1c43e4fe2154fce6a4ffe3801ba1f51ff362698b248b9a3d42
 
 prepare() {
   cd freeglut
+
+  # Fix build with CMake 4+
+  git cherry-pick -n 2294389397912c9a6505a88221abb7dca0a4fb79
+
+  # Fix build with GCC 15+
+  git cherry-pick -n 800772e993a3ceffa01ccf3fca449d3279cde338
 }
 
 build() {
@@ -41,14 +46,12 @@ build() {
     -D CMAKE_INSTALL_PREFIX=/usr
     -D FREEGLUT_BUILD_STATIC_LIBS=OFF
   )
-
   cmake -S freeglut -B build -G Ninja "${cmake_options[@]}"
   cmake --build build
 }
 
 check() {
-  cd build
-  ctest --output-on-failure --stop-on-failure -j$(nproc)
+  ctest --test-dir build --output-on-failure --stop-on-failure -j$(nproc)
 }
 
 package() {
