--- a/world/hwloc/.artixlinux/pkgbase.yaml
+++ b/world/hwloc/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: hwloc
-  version: 2.12.0-2
+  version: 2.12.1-1
   arch:
     - x86_64
   pkgname:
     - hwloc
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 2.12.0-2
+    version: 2.12.1-1
     packages:
-      - hwloc-2.12.0-2-x86_64.pkg.tar.zst
+      - hwloc-2.12.1-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
