--- a/world/netpbm/PKGBUILD
+++ b/world/netpbm/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=netpbm
 pkgver=10.86.46
-pkgrel=2
+pkgrel=3
 pkgdesc='A toolkit for manipulation of graphic images'
 arch=(x86_64)
 license=(Artistic-1.0 GPL-2.0-only LGPL-2.0-only MIT)
@@ -17,7 +17,6 @@ depends=(bash
          libxml2
          perl
          zlib)
-options=(!makeflags)
 # Get docs with: wget --recursive --relative -nH http://netpbm.sourceforge.net/doc/
 source=(https://downloads.sourceforge.net/project/netpbm/super_stable/$pkgver/netpbm-$pkgver.tgz
         https://sources.archlinux.org/other/packages/netpbm/netpbm-doc-31Jan2014.tar.xz{,.sig}
@@ -43,14 +42,13 @@ prepare() {
   patch -p1 < ../reproducible-man-gzip.patch
 
   cp config.mk.in  config.mk
-  [ "${CARCH}" = 'x86_64' ] && echo 'CFLAGS_SHLIB = -fPIC' >> config.mk
+  echo 'CFLAGS_SHLIB = -fPIC' >> config.mk
   echo "NETPBM_DOCURL = file://${srcdir}/doc" >> config.mk
   echo 'TIFFLIB = libtiff.so' >> config.mk
   echo 'JPEGLIB = libjpeg.so' >> config.mk
   echo 'PNGLIB = libpng.so' >> config.mk
   echo 'ZLIB = libz.so' >> config.mk
   echo 'JBIGLIB = /usr/lib/libjbig.a' >> config.mk
-  echo 'CFLAGS = -std=c17 -Wno-implicit-function-declaration -Wno-int-conversion -D_DEFAULT_SOURCE' >> config.mk
 
   sed -i 's|misc|share/netpbm|' common.mk
   sed -e 's|/sharedlink|/lib|' -e 's|/staticlink|/lib|' -i lib/Makefile
@@ -59,6 +57,7 @@ prepare() {
 
 build() {
   cd $pkgname-$pkgver
+  CFLAGS+=' -std=gnu17'
   make
   # Generating useful man pages with html doc
   # TODO: Enable when we have it updated
