--- a/world/perl-crypt-openssl-rsa/.artixlinux/pkgbase.yaml
+++ b/world/perl-crypt-openssl-rsa/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: perl-crypt-openssl-rsa
-  version: 0.33-5
+  version: 0.35-1
   arch:
     - x86_64
   pkgname:
     - perl-crypt-openssl-rsa
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.33-5
+    version: 0.35-1
     packages:
-      - perl-crypt-openssl-rsa-0.33-5-x86_64.pkg.tar.zst
+      - perl-crypt-openssl-rsa-0.35-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
