--- a/world/gupnp-igd/.artixlinux/pkgbase.yaml
+++ b/world/gupnp-igd/.artixlinux/pkgbase.yaml
@@ -1,54 +1,60 @@
 ---
-pkgbase:
-  name: gupnp-igd
-  version: 1.6.0-1
-  arch:
-    - x86_64
-  pkgname:
-    - gupnp-igd
 actions:
-  addRepo: null
+  addRepo: world
   removeRepo: null
-  triggersBuild: false
+  triggersBuild: true
   triggersRebuild: false
-  triggersRepoAdd: false
+  triggersRepoAdd: true
   triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 1.6.0-1
+    version: 1.6.0-2
     packages:
-      - gupnp-igd-1.6.0-1-x86_64.pkg.tar.zst
+      - gupnp-igd-1.6.0-2-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
+team: world
