--- a/world/unarchiver/.artixlinux/pkgbase.yaml
+++ b/world/unarchiver/.artixlinux/pkgbase.yaml
@@ -1,55 +1,60 @@
 ---
-pkgbase:
-  name: unarchiver
-  version: 1.10.8-4
-  arch:
-    - x86_64
-  pkgname:
-    - unarchiver
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 1.10.8-4
+    version: 1.10.8-5
     packages:
-      - unarchiver-1.10.8-4-x86_64.pkg.tar.zst
+      - unarchiver-1.10.8-5-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
