--- a/world/rust/.artixlinux/pkgbase.yaml
+++ b/world/rust/.artixlinux/pkgbase.yaml
@@ -1,17 +1,4 @@
 ---
-pkgbase:
-  name: rust
-  version: 1:1.86.0-1
-  arch:
-    - x86_64
-  pkgname:
-    - rust
-    - lib32-rust-libs
-    - rust-musl
-    - rust-aarch64-gnu
-    - rust-aarch64-musl
-    - rust-wasm
-    - rust-src
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -24,44 +11,56 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 1:1.86.0-1
+    version: 1:1.87.0-1
     packages:
-      - rust-1:1.86.0-1-x86_64.pkg.tar.zst
-      - lib32-rust-libs-1:1.86.0-1-x86_64.pkg.tar.zst
-      - rust-musl-1:1.86.0-1-x86_64.pkg.tar.zst
-      - rust-aarch64-gnu-1:1.86.0-1-x86_64.pkg.tar.zst
-      - rust-aarch64-musl-1:1.86.0-1-x86_64.pkg.tar.zst
-      - rust-wasm-1:1.86.0-1-x86_64.pkg.tar.zst
-      - rust-src-1:1.86.0-1-x86_64.pkg.tar.zst
+      - rust-1:1.87.0-1-x86_64.pkg.tar.zst
+      - lib32-rust-libs-1:1.87.0-1-x86_64.pkg.tar.zst
+      - rust-musl-1:1.87.0-1-x86_64.pkg.tar.zst
+      - rust-aarch64-gnu-1:1.87.0-1-x86_64.pkg.tar.zst
+      - rust-aarch64-musl-1:1.87.0-1-x86_64.pkg.tar.zst
+      - rust-wasm-1:1.87.0-1-x86_64.pkg.tar.zst
+      - rust-src-1:1.87.0-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
