--- a/world/plasma5support/.artixlinux/srcinfo.yaml
+++ b/world/plasma5support/.artixlinux/srcinfo.yaml
@@ -1,10 +1,10 @@
 ---
-version: 6.3.5-1
+version: 6.3.5-2
 pkgbase:
   name: plasma5support
   pkgdesc: Support components for porting from KF5/Qt5 to KF6/Qt6
   pkgver: 6.3.5
-  pkgrel: 1
+  pkgrel: 2
   url: https://kde.org/plasma-desktop/
   arch:
     - x86_64
@@ -15,6 +15,7 @@ pkgbase:
   makedepends:
     - doxygen
     - extra-cmake-modules
+    - gpsd
     - networkmanager-qt
     - plasma-activities
     - qt6-tools
@@ -37,7 +38,8 @@ pkgbase:
     - qt6-declarative
     - solid
   optdepends:
-    - 'networkmanager-qt: geolocation dataengine'
+    - 'gpsd: GPS-based geolocation dataengine'
+    - 'networkmanager-qt: IP-based geolocation dataengine'
     - 'plasma-activities: activities dataengine'
   source:
     - https://download.kde.org/stable/plasma/6.3.5/plasma5support-6.3.5.tar.xz
@@ -52,4 +54,4 @@ pkgbase:
     - SKIP
 pkgname:
   - name: plasma5support
-# generated with artixpkg 0.36.1-1-any
+# generated with artixpkg 0.36.2-1-any
