--- a/world/boinc/.artixlinux/pkgbase.yaml
+++ b/world/boinc/.artixlinux/pkgbase.yaml
@@ -1,12 +1,4 @@
 ---
-pkgbase:
-  name: boinc
-  version: 8.0.2-2
-  arch:
-    - x86_64
-  pkgname:
-    - boinc
-    - boinc-nox
 actions:
   addRepo: world
   removeRepo: null
@@ -19,39 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 8.0.2-2
+    version: 8.0.3-1
     packages:
-      - boinc-8.0.2-2-x86_64.pkg.tar.zst
-      - boinc-nox-8.0.2-2-x86_64.pkg.tar.zst
+      - boinc-8.0.3-1-x86_64.pkg.tar.zst
+      - boinc-nox-8.0.3-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
